# SDP-2026

./: .gitignore  .gitmodules  Metrics.py  README.md  allclear_instructions.md  environment.yml  ids.txt  index.html  metric_results.csv  objects.txt  pyproject.toml  requirements.txt  script.js  sizes.txt  style.css  visualize_allclear_universal.py
SDP2026(web)/: index.html  script.js  style.css
api/: pipeline.py
benchmark/: dataset.py  deepsum_model.py  io.py  metrics.py  run_baselines.py  run_evaluation.py  visualize_dataset.py
cli/: main.py
data/: probav.py  transforms.py
datasets/allclear/: __init__.py  allclear.py  io.py  transforms.py
datasets/probav/: __init__.py  probav.py
evaluation/: aggregate.py  baselines.py  metrics.py  visualize_dataset.py  visualize_outputs.py
metrics/: metrics.py
models/RAMS/: model.py  network.py  prediction.py
models/allclear_baselines/: __init__.py  least_cloudy.py  mosaicing.py  uncrtaints.py
models/baselines/: baseline_upscale.py  central_tendency.py
models/deepsum/: model.py  (+1 more)
notebooks/: visualize_allclear.ipynb
proba-v/: inference.py  main2.py  model2.py  probavisualizer.py  utils2.py
scripts/: metrics.cmd  metrics.py  preview_model.py  run_baselines.py  run_benchmark.cmd  run_evaluation.py  run_visualize.cmd  sdp.cmd  utils.py  visualize_allclear_cli.py
sdp/: README.md  __init__.py  __main__.py  _probav.py  api.py  cli.py  config.py  datasets.py  metrics.py  runner.py  visualize.py
src/: Metrics.py  filter.py  jsonify.py  roi_localizer.py  visualize_allclear.py
visualize/: __init__.py  visualize.py
(+27 files in other folders)
